# ai-tools-lib-rust

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  build.rs
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: lib.rs  selection_utils.rs
src/llms/: base.rs  gemini.rs  mod.rs  openai.rs  token_counter.rs
src/prompt_manager/: mod.rs  prompt_layer.rs  prompt_template.rs  templates.rs
src/utils/: math_utils.rs  mod.rs  pydantic_helper.rs
tests/: basic.rs  prompt_manager.rs  pydantic_helper.rs  selection_utils.rs
