[package]
# mirrors ai-tools crate
name = "ai-tools-lib-rust"
version = "0.1.0"
edition = "2024"
description = "AI utilities for Rust callers matching the ai-tools Python behavior."

[dependencies]
tokio = { version = "1.36", features = ["rt", "macros"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tera = "1.20"
include_dir = "0.7"
serde_yaml = "0.9"
once_cell = "1.18"
log = "0.4"
thiserror = "1.0"
rand = "0.8"
regex = "1"
uuid = { version = "1.4", features = ["v4", "serde"] }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3"
mockall = "0.11"
